[WIP] feat(navigator/tpll): ✨ use cookie for server-transfer-tpll's